test/expected/declare_pv-knr.out
declare p as pointer to void
                        ^
25: error: "void": unsupported type until C89
